--- a/gitversion.yml
+++ b/gitversion.yml
@@ -5,3 +5,8 @@ major-version-bump-message: '\+semver:\s?(breaking|major)'
 minor-version-bump-message: '\+semver:\s?(feature|minor)'
 patch-version-bump-message: '\+semver:\s?(fix|patch)'
 no-bump-message: '\+semver:\s?(none|skip)'
+
+branches:
+  master:
+    regex: (^master$|^main$|^V0.8$)
+    is-mainline: true
