--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,10 +1,10 @@
-# local dev: bundle exec jekyll serve
+# Ref: https://jekyllrb.com/docs/usage/
+# Ref: https://github.com/pages-themes/cayman
+# Local dev: bundle exec jekyll serve --livereload
 
 title: "Stock Indicators for Python"
 tagline: "Send in historical price quotes and get back desired technical indicators.  Nothing more."
-
-# https://github.com/pages-themes/cayman
-remote_theme: pages-themes/cayman@v0.2.0
+locale: en_US
 
 # social media information
 image:
@@ -13,6 +13,9 @@ image:
   width: 1280
 
 logo: /assets/icons/android-chrome-192x192.png
+
+# https://github.com/pages-themes/cayman
+remote_theme: pages-themes/cayman@v0.2.0
 
 # override built-in github url because it does not fetch in build tests
 github:
@@ -23,14 +26,14 @@ sourceurl: "https://github.com/DaveSkender/Stock.Indicators.Python/blob/main/sto
 base_sourceurl: "https://github.com/DaveSkender/Stock.Indicators/blob/main/src"
 charturl: "https://raw.githubusercontent.com/DaveSkender/Stock.Indicators/main/docs/assets/charts"
 
+ga_tag: G-MNKJE3KS9Y
+
 plugins:
   - jemoji
   - jekyll-remote-theme
   - jekyll-sitemap
   - jekyll-last-modified-at
   - jekyll-redirect-from
-
-google_analytics: G-MNKJE3KS9Y
 
 exclude: [
   "*.json",
@@ -52,6 +55,14 @@ include: [
 ]
 
 permalink: pretty
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "base"
+      image: /assets/social-banner.png
 
 # page collections
 collections:
