--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -1,11 +1,11 @@
-name: test doc site
+name: test docs
 on:
   pull_request:
     branches: [main]
 
 jobs:
   testing:
-    name: a11y and URLs
+    name: URLs
     runs-on: ubuntu-latest
 
     steps:
@@ -15,7 +15,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: '16'
 
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
@@ -41,15 +41,8 @@ jobs:
       - name: Test for broken URLs
         working-directory: docs
         run: |
-          BUNDLE_GEMFILE="${{github.workspace}}/docs/GemFile" bundle exec htmlproofer \
+          BUNDLE_GEMFILE="${{github.workspace}}/docs/GemFile" bundle exec htmlproofer _site \
             --assume-extension \
             --http-status-ignore "403,406,429,503,999" \
-            --url-swap "https\://daveskender.github.io/Stock.Indicators.Python:http\://127.0.0.1:4000" \
-            _site
-
-      - name: Test accessibility
-        working-directory: docs
-        run: |
-          npx pa11y-ci \
-            --sitemap http://127.0.0.1:4000/sitemap.xml \
-            --sitemap-exclude "/*.pdf"
+            --url-swap "https\://dotnet.stockindicators.dev:http\://127.0.0.1:4000" \
+            --url-ignore "/fonts.gstatic.com/"
