--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -87,6 +87,9 @@ jobs:
         Windows-Python310:
           imageName: windows-latest
           python.version: "3.10"
+        Windows-Python311:
+          imageName: windows-latest
+          python.version: "3.11"
         Linux-Python37:
           imageName: ubuntu-latest
           python.version: "3.7"
@@ -99,6 +102,9 @@ jobs:
         Linux-Python310:
           imageName: ubuntu-latest
           python.version: "3.10"
+        Linux-Python311:
+          imageName: ubuntu-latest
+          python.version: "3.11"
         MacOS-Python37:
           imageName: macOS-latest
           python.version: "3.7"
@@ -111,6 +117,9 @@ jobs:
         MacOS-Python310:
           imageName: macOS-latest
           python.version: "3.10"
+        MacOS-Python311:
+          imageName: macOS-latest
+          python.version: "3.11"
 
     pool:
       name: Azure Pipelines
