--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,14 +17,14 @@ logo: /assets/icons/android-chrome-192x192.png
 # https://github.com/pages-themes/cayman
 remote_theme: pages-themes/cayman@v0.2.0
 
-# override built-in github url because it does not fetch in build tests
-github:
-  repository_url: "https://github.com/DaveSkender/Stock.Indicators.Python"
-  base_repository_url: "https://github.com/DaveSkender/Stock.Indicators"
+# .NET site URL refs
+dotnet:
+  repo: "https://github.com/DaveSkender/Stock.Indicators"
+  src: "https://github.com/DaveSkender/Stock.Indicators/blob/main/src"
+  charts: "https://raw.githubusercontent.com/DaveSkender/Stock.Indicators/main/docs/assets/charts"
 
+# this site URL refs
 sourceurl: "https://github.com/DaveSkender/Stock.Indicators.Python/blob/main/stock_indicators/indicators"
-base_sourceurl: "https://github.com/DaveSkender/Stock.Indicators/blob/main/src"
-charturl: "https://raw.githubusercontent.com/DaveSkender/Stock.Indicators/main/docs/assets/charts"
 
 ga_tag: G-MNKJE3KS9Y
 
