--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,6 +25,7 @@ dotnet:
 
 # this site URL refs
 baseurl: ""
+url: "https://python.stockindicators.dev"
 repository: DaveSkender/Stock.Indicators.Python
 sourceurl: "https://github.com/DaveSkender/Stock.Indicators.Python/blob/main/stock_indicators/indicators"
 
