--- a/.github/build.main.yml
+++ b/.github/build.main.yml
@@ -75,51 +75,74 @@ jobs:
 
     strategy:
       matrix:
-        Windows-Python37:
-          imageName: windows-latest
-          python.version: "3.7"
         Windows-Python38:
           imageName: windows-latest
           python.version: "3.8"
-        Windows-Python39:
+          dotnet.version: "6.0.x"
+        # Windows-Python39:
+        #   imageName: windows-latest
+        #   python.version: "3.9"
+        #   dotnet.version: "6.0.x"
+        # Windows-Python310:
+        #   imageName: windows-latest
+        #   python.version: "3.10"
+        #   dotnet.version: "6.0.x"
+        # Windows-Python311:
+        #   imageName: windows-latest
+        #   python.version: "3.11"
+        #   dotnet.version: "6.0.x"
+        Windows-Python312:
           imageName: windows-latest
-          python.version: "3.9"
-        Windows-Python310:
-          imageName: windows-latest
-          python.version: "3.10"
-        Windows-Python311:
-          imageName: windows-latest
-          python.version: "3.11"
-        Linux-Python37:
-          imageName: ubuntu-latest
-          python.version: "3.7"
+          python.version: "3.12"
+          dotnet.version: "6.0.x"
         Linux-Python38:
           imageName: ubuntu-latest
           python.version: "3.8"
-        Linux-Python39:
+          dotnet.version: "6.0.x"
+        # Linux-Python39:
+        #   imageName: ubuntu-latest
+        #   python.version: "3.9"
+        #   dotnet.version: "6.0.x"
+        # Linux-Python310:
+        #   imageName: ubuntu-latest
+        #   python.version: "3.10"
+        #   dotnet.version: "6.0.x"
+        # Linux-Python311:
+        #   imageName: ubuntu-latest
+        #   python.version: "3.11"
+        #   dotnet.version: "6.0.x"
+        Linux-Python312:
           imageName: ubuntu-latest
-          python.version: "3.9"
-        Linux-Python310:
-          imageName: ubuntu-latest
-          python.version: "3.10"
-        Linux-Python311:
-          imageName: ubuntu-latest
-          python.version: "3.11"
-        MacOS-Python37:
-          imageName: macOS-latest
-          python.version: "3.7"
+          python.version: "3.12"
+          dotnet.version: "6.0.x"
         MacOS-Python38:
           imageName: macOS-latest
           python.version: "3.8"
-        MacOS-Python39:
+          dotnet.version: "6.0.x"
+        # MacOS-Python39:
+        #   imageName: macOS-latest
+        #   python.version: "3.9"
+        #   dotnet.version: "6.0.x"
+        # MacOS-Python310:
+        #   imageName: macOS-latest
+        #   python.version: "3.10"
+        #   dotnet.version: "6.0.x"
+        # MacOS-Python311:
+        #   imageName: macOS-latest
+        #   python.version: "3.11"
+        #   dotnet.version: "6.0.x"
+        MacOS-Python312:
           imageName: macOS-latest
-          python.version: "3.9"
-        MacOS-Python310:
+          python.version: "3.12"
+          dotnet.version: "6.0.x"
+        MacOS-Python38-Dotnet6:
           imageName: macOS-latest
-          python.version: "3.10"
-        MacOS-Python311:
+          python.version: "3.8"
+          dotnet.version: "6.0.x"
+        MacOS-Python38-Dotnet8:
           imageName: macOS-latest
-          python.version: "3.11"
+          python.version: "3.8"
+          dotnet.version: "8.0.x"
 
     pool:
       name: Azure Pipelines
@@ -130,7 +153,7 @@ jobs:
         displayName: Use .NET 6.0
         inputs:
           packageType: 'sdk'
-          version: '6.0.x'
+          version: "$(dotnet.version)"
 
       - task: UsePythonVersion@0
         inputs:
