--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,12 +38,9 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
-        working-directory: ${{ github.workspace }}
+          pip install -r requirements-test.txt
 
       - name: Run Tests
         run: |
-          pip install -r requirements-test.txt
-          pytest -vr A tests --junitxml=${{ github.workspace }}/tests/test-results.xml --cov=${{ github.workspace }}/stock_indicators --cov-report xml:${{ github.workspace }}/tests/coverage.xml
-        working-directory: ${{ github.workspace }}
+          pytest -vr A tests
