--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 # Ref: https://jekyllrb.com/docs/usage/
 # Ref: https://github.com/pages-themes/cayman
-# Local dev: bundle exec jekyll serve --livereload
+# Local dev: bundle exec jekyll serve -o -l
 
 title: "Stock Indicators for Python"
 tagline: "Send in historical price quotes and get back desired technical indicators.  Nothing more."
