--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,24 +8,31 @@ on:
       - main
 
 jobs:
+
+  # production build
   build:
     name: Build distribution 📦
     runs-on: ubuntu-latest
 
     steps:
+
     - uses: actions/checkout@v4
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: "3.x"
+
     - name: Install pypa/build
       run: >-
         python3 -m
         pip install
         wheel sdist setuptools_scm
         --user
+
     - name: Build a binary wheel and a source tarball
       run: python3 setup.py sdist bdist_wheel
+
     - name: Store the distribution packages
       uses: actions/upload-artifact@v3
       with:
@@ -33,37 +40,41 @@ jobs:
         path: dist/
 
 
-# This will be triggered everytime when tag is created
+  # This will be triggered only when a tag is pushed
   publish-to-pypi:
-    name: >-
-      Publish Python 🐍 distribution 📦 to PyPI
-    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+    name: Publish Python 🐍 distribution 📦 to PyPI
+    if: startsWith(github.ref, 'refs/tags/')
     needs:
     - build
     runs-on: ubuntu-latest
+
     environment:
       name: pypi
       url: https://pypi.org/p/stock-indicators
+
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
     steps:
+
     - name: Download all the dists
       uses: actions/download-artifact@v3
       with:
         name: python-package-distributions
         path: dist/
+
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+
     - name: Tag and draft release note
       uses: ncipollo/release-action@v1
       with:
-        body: "We’ve released a new Stock Indicators for Python.  See [Skender.Stock.Indicators @ PyPI.org](${{ vars.PYPI_DOWNLOAD_PREFIX }}${{ github.ref_name }}) for more information."
+        body: "We’ve released a new Stock Indicators for Python.  See [stock-indicators @ PyPI.org](${{ vars.PYPI_DOWNLOAD_PREFIX }}${{ github.ref_name }}) for more information."
         generateReleaseNotes: true
         draft: true
 
 
-# This will be triggered everytime when commit is pushed on main branch
+  # This will be triggered everytime when commit is pushed on main branch
   publish-to-testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
     needs:
@@ -71,18 +82,20 @@ jobs:
     runs-on: ubuntu-latest
 
     environment:
-      name: testpypi
+      name: pypi-test
       url: https://test.pypi.org/p/stock-indicators
 
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
     steps:
+
     - name: Download all the dists
       uses: actions/download-artifact@v3
       with:
         name: python-package-distributions
         path: dist/
+
     - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
