--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 # ref: https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows
 
-name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
+name: Build and Publish
 
 on:
   push:
@@ -42,7 +42,7 @@ jobs:
 
   # This will be triggered only when a tag is pushed
   publish-to-pypi:
-    name: Publish Python 🐍 distribution 📦 to PyPI
+    name: Publish to PyPI 🐍
     if: startsWith(github.ref, 'refs/tags/')
     needs:
     - build
@@ -69,7 +69,7 @@ jobs:
 
   # This will be triggered everytime when commit is pushed on main branch
   publish-to-testpypi:
-    name: Publish Python 🐍 distribution 📦 to TestPyPI
+    name: Publish to TestPyPI 🐍
     needs:
     - build
     runs-on: ubuntu-latest
