--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,21 @@ dependencies = [
     "pythonnet>=3.0.0",
     "typing_extensions>=4.0.0"
 ]
-keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
+keywords = [
+"Indicators", "Stock", "Market", "Technical", "Analysis", "Algorithmic", "Trading", "Trade", "Trend",
+"Momentum", "Finance", "Algorithm", "Algo", "AlgoTrading", "Financial", "Strategy", "Chart", "Charting",
+"Oscillator", "Overlay", "Equity", "Bitcoin", "Crypto", "Cryptocurrency", "Forex", "Quantitative",
+"Historical", "Quotes", "Accumulation", "Distribution", "ADL", "Aroon", "True Range", "ATR",
+"Bollinger Bands", "Commodity", "CCI", "Chandelier Exit", "Chaikin Money Flow", "CMF", "MFI",
+"Kaufman Adaptive", "Moving Average", "Convergence", "Divergence", "MACD", "SMA", "EMA", "DEMA",
+"TEMA", "TRIX", "Smoothed", "Elder-ray", "Bull", "Bear", "Power", "Force", "Hurst Exponent",
+"Relative", "Strength", "Index", "RSI", "Connors RSI", "Stochastic", "Directional", "Movement", "ADX",
+"Donchian", "Keltner Channel", "Heikin-Ashi", "Hilbert Transform Instantaneous Trendline", "Hull",
+"HMA", "Ichimoku Cloud", "On-balance Volume", "OBV", "Price", "PMO", "PRS", "Parabolic SAR", "PSAR",
+"Pivot Points", "Rate of Change", "ROC", "Linear Regression", "R-Squared", "Renko", "Schaff Cycle",
+"Slope", "Standard Deviation", "Beta", "Convexity", "Correlation", "SuperTrend", "Ulcer", "Ultimate",
+"Vortex", "Williams %R", "Alligator", "Gator", "Fractal", "Chaos", "Choppiness", "Endpoint", "WMA", "ZigZag"]
+
 dynamic = ["version"]
 
 [project.urls]
