--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,14 +24,10 @@ jobs:
         python-version: "3.x"
 
     - name: Install pypa/build
-      run: >-
-        python3 -m
-        pip install
-        wheel sdist setuptools_scm
-        --user
+      run: python3 -m pip install build --user
 
     - name: Build a binary wheel and a source tarball
-      run: python3 setup.py sdist bdist_wheel
+      run: python3 -m build
 
     - name: Store the distribution packages
       uses: actions/upload-artifact@v3
