--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,8 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
-        python-version: ["3.8", "3.12"]
-        dotnet-version: ["6.0.x", "8.0.x"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        dotnet-version: ["6.0.x", "7.0.x", "8.0.x"]
 
     steps:
       - name: Checkout Repository
