--- a/docs/GemFile
+++ b/docs/GemFile
@@ -8,12 +8,12 @@ gem 'faraday-retry'
 # local dev: bundle exec jekyll serve
 group :jekyll_plugins do
   gem 'github-pages'
-  gem 'jekyll-github-metadata'
-  gem 'jemoji'
-  gem 'jekyll-remote-theme'
+  gem "jekyll-github-metadata"
+  gem 'jekyll-seo-tag'
   gem 'jekyll-sitemap'
   gem 'jekyll-last-modified-at' # used in sitemap
   gem 'jekyll-redirect-from'
+  gem 'jekyll-minifier'
 end
 
 gem "webrick" # needed for ruby > v3.0
